@@ -32,6 +32,7 @@
 
    - ofa_application_get_file_dir(): new method.
    - ofa_dossier_misc_get_dossiers(): removed function (todo #893).
+   - ofa_dossier_misc_get_exercices(): removed function.
    - ofa_main_window_open_dossier(): new method.
    - ofaIDBConnect: new DBMS connection management interface.
    - ofaIDBProvider: new DBMS directory management interface.
